--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -117,9 +117,7 @@ Sun Jan 21 18:59:15 UTC 2018
 [root@cli ~]# systemctl restart nfs
 [root@cli ~]# systemctl status nfs-secure # verify running
 [root@cli ~]# systemctl status rpcgssd # verify running
-# note that we mount "/" which is not the same assh-4.2$ cat /mnt/net/test.testuser 
-Sun Jan 21 18:59:15 UTC 2018
- the root directory of nfs server/
+# note that we mount "/" which is not the same as the root directory of nfs server/
 [root@cli ~]# mount -v -t nfs -o sec=krb5 nfs.demo.poc:/ /mnt
 [root@cli ~]# mount | grep poc
 #nfs.demo.poc:/ on /mnt type nfs4 (rw,relatime,vers=4.1,rsize=65536,wsize=65536,namlen=255,hard,proto=tcp,timeo=600,retrans=2,sec=krb5,clientaddr=10.10.33.13,local_lock=none,addr=10.10.33.12)
